# ABC-Website

./: ABCMysqlNotes  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
abc_website/: .env_auth  asgi.py  settings.py  urls.py  views.py  wsgi.py
abc_website/static/admin/: models.py  url.py
abc_website/static/admin/css/: StyleSheet.css
abc_website/static/admin/migrations/: 0001_initial.py
abc_website/static/admin/templates/: join_us.html
abc_website/templates/: index.html
django/: pyvenv.cfg
job_board/: urls.py  views.py
job_board/templates/job_board/: job_board.html
join_us/: apps.py  forms.py  models.py  urls.py  views.py
join_us/migrations/: 0001_initial.py
join_us/templates/join_us/: join_us.html
learning_platform/: apps.py  urls.py  views.py
learning_platform/templates/learning_platform/: learning_platform.html
static/css/: style.css
staticfiles/admin/css/: StyleSheet.css
templates/: base.html  index.html  joinUs.html  mission.html  resources.html
