[tool.poetry]
name = "ABC-Website"
version = "0.1.0"
description = "ABC Website Project"
authors = ["T.L. Williams <tlwilliams895@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "Using version ^3.1.5 for Django"

[tool.poetry.dev-dependencies]
ipdb = "Using version ^0.13.4 for ipdb"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
